# drakkar

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  cli.py  drakkar_20260424-062730.yaml  pyproject.toml  setup.py
docs/source/: api.rst  conf.py  index.rst  installation.rst  operations.rst  usage.rst  workflows.rst
drakkar/: Snakefile  ascii.py  benchmark.py  cli.py  cli_context.py  cli_help.py  cli_main.py  cli_parser.py  cli_validation.py  config.py  config_commands.py  database_registry.py  display.py  downloads.py  input_errors.py  input_manifests.py  output.py  output_paths.py  quality.py  run_logs.py  run_metadata.py  status.py  system_checks.py  transfer.py  update_command.py  utils.py  workflow_launcher.py
drakkar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
drakkar/profile/local/: config.yaml
drakkar/profile/slurm/: config.yaml
drakkar/workflow/: Snakefile  cli.py  cli0.py  config.yaml
drakkar/workflow/envs/: annotating_function.yaml  annotating_function_dbcan.yaml  annotating_network.yaml  annotating_taxonomy.yaml  cataloging.yaml  profiling_genomes.yaml
scripts/: release.py
tests/: test_annotation_tables.py  test_assembly_inputs.py  test_cataloging_stats.py  test_cli_config.py  test_cli_database.py  test_cli_gtdb_version.py  test_cli_help.py  test_cli_logging.py  test_cli_overwrite.py  test_cli_quality.py  test_cli_status.py  test_cli_update.py  test_display_banner.py  test_gtdbtk_tree_pruning.py  test_merge_gene_annotations.py  test_output.py  test_preprocessing_fraction.py  test_preprocessing_nonpareil.py  test_preprocessing_temp_outputs.py  test_profiling_summaries.py  test_reference_index_archive.py  test_release_script.py  test_resource_multipliers.py  test_singlem_metapackage.py  test_url_inputs.py  test_workflow_resources.py
workflow/rules/: annotation.smk  quantification.smk
workflow/scripts/: example_script.py
(+50 files in other folders)
