[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "drakkar"
description = "Drakkar: a genome-resolved metagenomics pipeline."
dynamic = ["version"]
authors = [
    {name = "Antton Alberdi"},
]
maintainers = [
    {name = "Antton Alberdi"},
]

readme = "README.md"
keywords = ["Bioinformatics", "Prokaryote", "Binning", "Refinement", "Pangenome", "Metagenomics"]
classifiers=[
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics"]
requires-python = ">=3.8"
license = {file="LICENCE"}

#
[project.urls]
Repository = "https://github.com/alberdilab/drakkar"
Documentation = "https://drakkar.readthedocs.io"
#
#
[project.scripts]
binette = "drakkar.cli:main"
